# relational-databases

./: .gitignore  README.md  citation_guide.md  package-lock.json  package.json  pyproject.toml  renovate.json5
.github/ISSUE_TEMPLATE/: fehler-im-lehrmaterial-melden.md  fehler-im-lehrmaterial-melden.yml
.github/workflows/: build-container.yaml  build-container.yml  build-pg-verein-pr.yml  build-pg-verein.yml  deploy-artifacts.yml  deploy-book.yml  deploy-pg-verein.yaml
docs/: 0_intro.md  myst.yml  references.bib
docs/1_history/: 0_intro.md  1_historic_databases.md  2_influence_on_it.md  3_surge_of_relational_db.md  3_surge_of_relational_db_diagram.md  4_alternative_db.md  4_alternative_db_diagram.md  5_further_development.md  5_further_development_diagram.md  6_comparison.md  7_conclusion.md
docs/2_overview/: 0_intro.md  1_postgresql.md  2_mysql_mariadb.md  3_oracle.md  4_mssql.md  5_sqlite.md  6_pg_course.md  7_conclusion.md
docs/3_setup/: 0_intro.md  1_dbeaver.md  2_container_runtime.md  3_start_container.md  4_dbeaver_connection.md  5_conclusion.md
docs/4_acid_transactions/: 0_intro.md  1_origins.md  2_acid_properties.md  (+3 more)
postgres/: verein.Dockerfile
slides/: 0_history.md  1 - Geschichte.md  2 - Uebersicht Datenbankensysteme.md  2_acid_transactions.md  2_overview.md  5 - SQL Basics.md  6a - Relationen und Beziehungstypen.md  6b - Normalisierung.md  7 - Fortgeschrittenes SQL.md  7a - Data Definition Language.md  7b - Table Joins.md  7c - Aggregatfunktionen und Gruppierung.md  8 - Benutzerverwaltung und Berechtigungen.md  9 - Object-Relational Mapping.md
(+71 files in other folders)
