[project]
name = "db1"
description = ""
authors = [
    {name = "Simon Erhardt",email = "hello@rootlogin.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=2.0.0a0)",
    "linuxdir2html @ git+https://github.com/erhardtconsulting/LinuxDir2HTML.git@master",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
